# snapcal

./: .env.example  .gitignore  README.md  SECURITY.md  snapcal-demo-deck.pptx
app/: .gitignore  app.json  package-lock 2.json  package-lock.json  package.json
app/app/: _layout.tsx  onboarding.tsx  profile.tsx  settings.tsx  swiggy-restaurants.tsx
app/app/(tabs)/: index.tsx  (+3 more)
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  settings.py
backend/app/adapters/: __init__.py  recipes.py  swiggy.py  vision.py
backend/app/api/: dashboard.py  fridgescan.py  health.py  instamart.py  mealsnap.py  nutrition.py  swiggy.py
backend/app/data/: indian_food_seed.json
backend/app/db/: __init__.py  models.py  seed.py  session.py
backend/app/services/: __init__.py  gap_analyzer.py  meal_snap.py  nutrition_lookup.py  targets.py
backend/tests/: conftest.py  test_dashboard_and_swiggy.py  test_fridgescan.py  test_health.py  test_instamart.py  test_mealsnap.py  test_nutrition_lookup.py  test_seed.py
demo-video/: .gitignore  README.md  package-lock.json  package.json
demo-video/src/: Demo.tsx  Root.tsx  config.ts  get-video-metadata.ts
docs/: architecture.md  snapcal-prd.md
stitch_snapcal_mobile_ui_design/fridge_scan_result/: code.html
stitch_snapcal_mobile_ui_design/instamart_confirmation/: code.html
stitch_snapcal_mobile_ui_design/meal_result/: code.html
stitch_snapcal_mobile_ui_design/onboarding/: code.html
stitch_snapcal_mobile_ui_design/recipe_picker/: code.html
submission/: application-answers.md  cover-email.md  demo-script.md
(+22 files in other folders)
