[project]
name = "snapcal-backend"
version = "0.1.0"
description = "SnapCal FastAPI backend — Vision AI + Recipes + Swiggy MCP orchestration"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: Depends() in argument defaults is the canonical FastAPI pattern, not a bug.
# E741: We allow `l` for "log row" in short list comprehensions.
ignore = ["E501", "B008", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]
